// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should open the popup when the button is clicked 1`] = `
Array [
  Array [
    "edit-tags",
    Object {
      "currentTarget": Object {
        "blur": [Function],
      },
      "preventDefault": [Function],
      "stopPropagation": [Function],
      "target": Object {
        "blur": [Function],
      },
    },
  ],
]
`;

exports[`should open the popup when the button is clicked 2`] = `
<BubblePopupHelper
  isOpen={true}
  popup={
    <SetIssueTagsPopup
      organization="foo"
      selectedTags={
        Array [
          Object {
            "key": Object {
              "key": "mytag",
              "label": "mytag",
            },
            "label": Object {
              "key": "mytag",
              "label": "mytag",
            },
          },
          Object {
            "key": Object {
              "key": "test",
              "label": "test",
            },
            "label": Object {
              "key": "test",
              "label": "test",
            },
          },
        ]
      }
      setTags={[Function]}
    />
  }
  position="bottomright"
  togglePopup={[Function]}
>
  <button
    className="js-issue-edit-tags button-link issue-action issue-action-with-options"
    onClick={[Function]}
  >
    <TagsList
      allowUpdate={true}
      tags={
        Array [
          Object {
            "key": "mytag",
            "label": "mytag",
          },
          Object {
            "key": "test",
            "label": "test",
          },
        ]
      }
    />
  </button>
</BubblePopupHelper>
`;

exports[`should render with the action 1`] = `
<BubblePopupHelper
  isOpen={false}
  popup={
    <SetIssueTagsPopup
      organization="foo"
      selectedTags={
        Array [
          Object {
            "key": Object {
              "key": "mytag",
              "label": "mytag",
            },
            "label": Object {
              "key": "mytag",
              "label": "mytag",
            },
          },
          Object {
            "key": Object {
              "key": "test",
              "label": "test",
            },
            "label": Object {
              "key": "test",
              "label": "test",
            },
          },
        ]
      }
      setTags={[Function]}
    />
  }
  position="bottomright"
  togglePopup={[Function]}
>
  <button
    className="js-issue-edit-tags button-link issue-action issue-action-with-options"
    onClick={[Function]}
  >
    <TagsList
      allowUpdate={true}
      tags={
        Array [
          Object {
            "key": "mytag",
            "label": "mytag",
          },
          Object {
            "key": "test",
            "label": "test",
          },
        ]
      }
    />
  </button>
</BubblePopupHelper>
`;

exports[`should render without the action when the correct rights are missing 1`] = `
<TagsList
  allowUpdate={false}
  className="note"
  tags={
    Array [
      "issue.no_tag",
    ]
  }
/>
`;
